# fdedup

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: args.rs  args_clap.rs  args_getopts.rs  args_minimal.rs  deduplicator.rs  dedupstate.rs  duplicates.rs  hashedfile.rs  hashedfiles.rs  lib.rs  macros.rs  main.rs  types.rs  utils.rs  verbose.rs
src/args/: clap.rs
src/dedupstate/: dashmap.rs  mutex.rs  single.rs
