[package]
name = "fdedup"
version = "0.2.0"
edition = "2021"
authors = ["Massimo Fasciano <massimo@mafalitic.com>"]
description = "Find groups of duplicate files by content"

[dependencies]
sha2 = "0.10.6"
walkdir = "2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
clap = { version = "4.1.6", features = ["derive"] }
threadpool = "1.8.1"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "abort"
rpath = false
strip = true

[features]
default = ["threads","verbose"]
verbose = []
threads = []
