[package]
name = "fdedup"
version = "0.3.0"
edition = "2021"
authors = ["Massimo Fasciano <massimo@mafalitic.com>"]
description = "Find groups of duplicate files by content"

[dependencies]
sha2 = "0.10.6"
walkdir = "2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
clap = { version = "4.1.8", features = ["derive"], optional = true}
threadpool = { version = "1.8.1", optional = true }
rayon = { version = "1.6.1", optional = true }
once_cell = "1.17.1"
getopts = { version = "0.2", optional = true }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "abort"
rpath = false
strip = true

[features]
default = ["native"]
#default = ["wasi"]
#native = ["clap", "rayon", "verbose"]
#native = ["clap", "threadpool", "verbose"]
native = ["clap", "verbose"]
wasi = ["verbose", "getopts"]
#wasi = ["verbose"]
threads = []
verbose = []
clap = ["dep:clap"]
getopts = ["dep:getopts"]
threadpool = ["dep:threadpool", "threads"]
rayon = ["dep:rayon", "threads"]
