[package]
name = "fdedup"
version = "0.3.2"
edition = "2021"
authors = ["Massimo Fasciano <massimo@mafalitic.com>"]
description = "Find groups of duplicate files by content"

[dependencies]
sha2 = "0.10.6"
walkdir = "2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
clap = { version = "4.1.8", features = ["derive"], optional = true}
threadpool = { version = "1.8.1", optional = true }
rayon = { version = "1.6.1", optional = true }
once_cell = "1.17.1"
getopts = { version = "0.2", optional = true }
dashmap = { version = "5.4.0", optional = true }
anyhow = "1.0.70"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "abort"
rpath = false
strip = true

[features]
default = ["native"]
#default = ["wasi"]
native = ["clap", "mutex", "verbose"]
#native = ["clap", "channel", "verbose"]
#native = ["clap", "dashmap", "verbose"]
#native = ["clap", "verbose"]
wasi = ["verbose", "getopts"]
#wasi = ["verbose", "clap"]
#wasi = ["verbose"]
threads = []
verbose = []
clap = ["dep:clap"]
getopts = ["dep:getopts"]
channel = ["dep:threadpool", "threads"]
mutex = ["dep:rayon", "threads"]
dashmap = ["dep:dashmap", "dep:rayon", "threads"]
refcell = []
